fix - fixed sonar code smells